@@ -60,6 +60,9 @@ struct T {
 int global_uninitialized;
 int global_initialized = 1 + 2 + 3 + 4;
 
+int global_array_initialized[3] = {10, 20, 30};
+int global_array_partially_initialized[5] = {10 };
+
 int main() {
 	int a = 0, b = 1, c = 2, d, arr[10];
 	d = 3;
@@ -133,6 +136,16 @@ int main() {
 
 	if(global_uninitialized != 0) return 30;
 	if(global_initialized != 10) return 31;
+
+	if(global_array_initialized[0] != 10) return 32;
+	if(global_array_initialized[1] != 20) return 33;
+	if(global_array_initialized[2] != 30) return 34;
+
+	if(global_array_partially_initialized[0] != 10) return 35;
+	if(global_array_partially_initialized[1] != 0) return 36;
+	if(global_array_partially_initialized[2] != 0) return 37;
+	if(global_array_partially_initialized[3] != 0) return 38;
+	if(global_array_partially_initialized[4] != 0) return 39;
 
 	return 0;
 }
